# janus

./: .env.example  .gitignore  .mcp.json  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  skills_market.json
.github/workflows/: publish-docker.yml  publish-pypi.yml
janus/: __init__.py  __main__.py  a2a.py  app.py  at_mentions.py  audit_log.py  auto_mode.py  backup.py  blackboard.py  branding.py  cache.py  chunk_batcher.py  cli.py  cli_rich.py  commands.py  config.py  context_trim.py  conversation.py  cost.py  diff.py  doctor.py  eval.py  event_render.py  executor.py  goal_loop.py  goals.py  headless.py  hooks.py  index.py  init_codebase.py  injection.py  insights.py  interpreter.py  interview_inferred.py  interview_runner.py  interviews.py  llm.py  logger.py  memory.py  memory_cards.py  (+54 more)
janus/agents/: __init__.py  base.py  identity.py  memory.py  registry.py  skills.py
janus/agents/bundled/: __init__.py
janus/agents/bundled/claude/: __init__.py  agent.py
janus/agents/bundled/coder/: __init__.py  agent.py
janus/agents/bundled/developer/: __init__.py  agent.py
janus/agents/bundled/documenter/: __init__.py  agent.py
janus/agents/bundled/researcher/: __init__.py  agent.py
janus/agents/bundled/reviewer/: __init__.py  agent.py
janus/agents/bundled/tester/: __init__.py  agent.py
janus/gateways/: __init__.py  _common.py  telegram.py  web.py  web_audit.py  web_auth.py  web_bridge.py  web_kanban.py  whatsapp.py
janus/gateways/static/: app.css  app.js  index.html  login.html
janus/interviews_bundled/: __init__.py  constraint.md  decision.md  goal.md  habit.md  identity.md  preference.md  project.md  relationship.md
janus/kanban/: __init__.py  dispatcher.py  state.py  store.py
janus/mcp/: __init__.py  client.py  server.py
janus/skills_bundled/: __init__.py  adversarial-self-test.md  agent-orchestrate.md  agent-self-portrait.md  aider-refactor.md  calendar-plan.md  claude-code-handoff.md  codex-cli-task.md  confidence-self-report.md  conversation-fork.md  conversation-grep.md  cost-cartographer.md  creative-audio-gen.md  creative-image-gen.md  creative-pixel-and-ascii.md  creative-video-gen.md  delegate-to-agent.md  dev-diff-narrator.md  dev-flake-hunter.md  devops-orchestrate.md  diagram-author.md  distillation-recorder.md  doc-create.md  domain-recon.md  email-toolkit.md  environment-probe.md  formal-spec-translator.md  gaming-server.md  gemini-cli-task.md  gh-pr.md  gh-release.md  gh-review.md  gh-triage.md  home-automation.md  hook-author.md  inference-multimodel.md  interpretability-probe.md  jupyter-explore.md  log-bisect.md  macos-system.md  (+23 more)
janus/swarms/: __init__.py  aggregators.py  budget.py  cancel.py  recursion.py  runner.py  slash.py  spec.py  state.py
janus/tools/: __init__.py  a2a_call.py  agent.py  aider.py  base.py  browser.py  bus.py  capabilities.py  clarify.py  claude_code.py  code_exec.py  codex_cli.py  delegate.py  edit.py  external_cli_base.py  fs.py  gateway_send_file.py  gemini_cli.py  glob.py  grep.py  image_gen.py  interview_ask.py  kanban.py  memory_search.py  multi_edit.py  notebook.py  plan_mode.py  session_search.py  shell.py  shell_bg.py  shell_pty.py  shell_pty_win.py  ssh_exec.py  subagent.py  swarm_run.py  telegram_react.py  telegram_send.py  todo.py  vision.py  web.py  (+1 more)
janus/triggers/: __init__.py  base.py  runtime.py
janus/tui/: __init__.py  app.py
scripts/: install.sh  install_services.sh  smoke_mcp_server.py  smoke_round_trip.py
scripts/git-hooks/: post-merge
tests/: conftest.py  test_agent_prompt_v152.py  test_agent_system_prompt.py  test_agents.py  test_app_event_stream.py  test_approver.py  test_approver_args.py  test_at_mentions.py  test_auto_mode.py  test_auto_permissions.py  test_auto_ui.py  test_branding.py  test_capabilities.py  test_chatbot_guard.py  test_clarify_and_delegate.py  test_cli_logo.py  test_cli_rich_completer.py  test_cli_thinking_indicator.py  test_coding_agent_audit.py  test_conversation.py  test_cost.py  test_cost_per_chat.py  test_diff_render_rich.py  test_eval.py  test_eval_drift_budget.py  test_executor_chat.py  test_executor_injection.py  test_fire_uses_chat.py  test_gateway_send_file.py  test_gateway_web.py  test_gateways_common.py  test_headless.py  test_hooks.py  test_hotkeys.py  test_index.py  test_injection.py  test_insights_and_titles.py  test_install_services_script.py  test_interpreter_identity.py  test_interview_ask_tool.py  (+181 more)
tests/fixtures/: demo-swarm.md
tutorials/: 01-hello-janus.md  02-your-first-skill.md  03-memory-loop.md  04-connect-mcp.md  05-gepa.md  README.md
