[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "janus-agent"
version = "1.29.2"
description = "Claude Code's UX, on any model, with plain-text state and a learning loop."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sam" }]
keywords = ["agent", "llm", "cli", "local-first", "safety"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]

# Core runtime — minimal on purpose (P6: no fat SDK in model-call path).
dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
# Polished single-pane streaming chat (cli_rich.py — Rich + prompt_toolkit).
rich = [
    "prompt_toolkit>=3.0",
    "rich>=13.0",
]
# v1.23 multi-pane TUI (janus tui — Textual app).
tui = [
    "textual>=0.50",
]
# Local web UI (Phase 11).
web = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
]
# Headless browser tools (Phase 9 — needs `playwright install chromium` after).
browser = [
    "playwright>=1.40",
]
# Telegram gateway (Phase 5; v1.3.2 — was missing from extras).
telegram = [
    "python-telegram-bot>=20",
]
# WhatsApp gateway is pure stdlib; no extra needed. Listed for symmetry.
whatsapp = []
# Test dependencies.
test = [
    "pytest>=8.0",
]
# Everything bundled — includes every gateway.
all = [
    "prompt_toolkit>=3.0",
    "rich>=13.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "playwright>=1.40",
    "python-telegram-bot>=20",
    "textual>=0.50",
]

[project.scripts]
janus = "janus.__main__:main"

[project.urls]
Source = "https://github.com/samalgotrader7-ops/janus"
Issues = "https://github.com/samalgotrader7-ops/janus/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["janus*"]

# v1.2.0: bundled skill catalog — 58 .md files copied to ~/.janus/skills/
# on first run. Listed explicitly here because they're not Python source.
# v1.19.0: same pattern for the bundled interview question library.
# v1.22.0: web frontend (HTML/CSS/JS) shipped in the wheel.
[tool.setuptools.package-data]
"janus.skills_bundled" = ["*.md", "*/SKILL.md", "*/scripts/*", "*/references/*"]
"janus.interviews_bundled" = ["*.md"]
"janus.gateways" = [
    "static/*.html", "static/*.css", "static/*.js",
    "static/vendor/*.js", "static/vendor/*.css",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
